crates/musq/tests/trybuild/fail_row_prefix_without_flatten.stderr
error: `prefix` requires `flatten`
  --> tests/trybuild/fail_row_prefix_without_flatten.rs:11:10
   |
11 |     foo: Foo,
   |          ^^^
